# action_data_offset_posture_ws

./: .gitignore
action_data_offset_ws/: .gitignore
action_data_offset_ws/build_aarch64/action_data_offset/: colcon_command_prefix_setup_py.sh.env
action_data_offset_ws/build_aarch64/casbot_arm_calibration_web/: colcon_command_prefix_setup_py.sh  colcon_command_prefix_setup_py.sh.env
action_data_offset_ws/build_aarch64/crb_ros_msg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_args.last  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__crb_ros_msg.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_generator_rs__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
action_data_offset_ws/build_x86/action_data_offset/: colcon_command_prefix_setup_py.sh.env
action_data_offset_ws/build_x86/casbot_arm_calibration_web/: colcon_command_prefix_setup_py.sh.env
action_data_offset_ws/build_x86/crb_ros_msg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_args.last  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__crb_ros_msg.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
action_data_offset_ws/install_aarch64/share/casbot_arm_calibration_web/: package.dsv  package.ps1  package.xml
action_data_offset_ws/install_aarch64/share/casbot_arm_calibration_web/launch/: arm_calibration_web.launch.py
action_data_offset_ws/install_aarch64/share/casbot_arm_calibration_web/new_offset_data/: keyboard_start_calibration_web_offset_20260423_110050_257.data
action_data_offset_ws/install_aarch64/share/casbot_arm_calibration_web/resource/keyboard/: keyboard_start_calibration.data
action_data_offset_ws/install_aarch64/share/crb_ros_msg/rust/: Cargo.toml
action_data_offset_ws/install_x86/share/action_data_offset/: package.dsv  package.ps1  package.sh  package.xml
action_data_offset_ws/install_x86/share/action_data_offset/data/: DZQ_PianYi_100HZ_transform.data  DZQ_PianYi_100HZ_transform_jacobian2.data  表头.data
action_data_offset_ws/install_x86/share/action_data_offset/doc/: 使用教程.md
action_data_offset_ws/install_x86/share/action_data_offset/urdf/xml/: CASBOT02_ENCOS_7dof_shell_20251015_P1L.xml  CASBOT02_ENCOS_7dof_shell_20251015_P1L_bass.xml  CASBOT02_ENCOS_7dof_shell_20251015_P1L_keyboard.xml
action_data_offset_ws/log/: latest_build
action_data_offset_ws/src/casbot_arm_calibration_web/: CASBOT_ARM_CALIBRATION_WEB.md  package.xml  setup.cfg
action_data_offset_ws/src/casbot_arm_calibration_web/casbot_arm_calibration_web/: calibration_data.py  kin_pin_trac.py  web_node.py
action_data_offset_ws/src/casbot_arm_calibration_web/casbot_arm_calibration_web/web/: app.js  style.css
action_data_offset_ws/src/casbot_arm_calibration_web/launch/: arm_calibration_web.launch.py
action_data_offset_ws/src/crb_ros_msg/: package.xml
build_aarch64/action_data_offset/: colcon_command_prefix_setup_py.sh.env
build_aarch64/action_data_offset/prefix_override/: sitecustomize.py
build_aarch64/casbot_arm_calibration_web/: colcon_command_prefix_setup_py.sh  colcon_command_prefix_setup_py.sh.env
build_aarch64/casbot_arm_calibration_web/prefix_override/: sitecustomize.py
build_aarch64/crb_ros_msg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_args.last  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__crb_ros_msg.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_generator_rs__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
build_aarch64/crb_ros_msg/ament_cmake_core/: package.cmake
install_aarch64/: local_setup.sh  setup.sh
install_aarch64/share/crb_ros_msg/rust/: Cargo.toml
log/: latest_build
src/casbot_arm_calibration_web/: setup.py
src/crb_ros_msg/: CMakeLists.txt  package.xml
(+296 files in other folders)
