<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_data_offset</name>
  <version>0.1.0</version>
  <description>Trajectory offset / transform tools for CASBOT arm data (Pinocchio FK/IK, .data / CSV pipelines; MuJoCo only for optional replay).</description>
  <maintainer email="support@example.com">CASBOT</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <!-- MuJoCo Python API (mujoco) is not an Ubuntu apt/rosdep default; install in the image: pip3 install mujoco -->
  <!-- Pinocchio (Python bindings) is used when --robot-model is a .urdf file; apt on Humble: ros-humble-pinocchio -->
  <exec_depend>ros-humble-pinocchio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
