[package]
name = "crb_ros_msg"
version = "0.1.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
action_msgs = "*"
geometry_msgs = "*"
unique_identifier_msgs = "*"
builtin_interfaces = "*"
std_msgs = "*"
sensor_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'action_msgs/serde', 'geometry_msgs/serde', 'unique_identifier_msgs/serde', 'builtin_interfaces/serde', 'std_msgs/serde', 'sensor_msgs/serde']

[package.metadata.rclrs]
reexport = true
